--- a/package.json
+++ b/package.json
@@ -4,23 +4,22 @@
   "private": true,
   "homepage": "/demo",
   "dependencies": {
-    "@types/lodash": "^4.14.178",
-    "@types/node": "^17.0.2",
-    "@types/react": "^17.0.37",
-    "@types/react-dom": "^17.0.11",
-    "babel-loader": "8.2.3",
-    "graphology": "^0.23.2",
-    "graphology-layout-forceatlas2": "^0.8.1",
-    "graphology-types": "^0.24.5",
-    "lodash": "^4.17.21",
-    "react": "^17.0.2",
-    "react-animate-height": "^2.0.23",
-    "react-dom": "^17.0.2",
-    "react-icons": "^4.3.1",
-    "react-scripts": "5.0.0",
-    "react-sigma-v2": "^1.3.0",
-    "sigma": "latest",
-    "typescript": "^4.5.4"
+    "@react-sigma/core": "^3.4.0",
+    "@react-sigma/layout-forceatlas2": "^3.4.0",
+    "@types/lodash": "^4.14.194",
+    "@types/node": "^18.15.11",
+    "@types/react": "^18.0.35",
+    "@types/react-dom": "^18.0.11",
+    "babel-loader": "^9.1.2",
+    "graphology": "^0.25.1",
+    "graphology-layout-forceatlas2": "^0.10.1",
+    "graphology-types": "^0.24.7",
+    "react": "^18.2.0",
+    "react-animate-height": "^3.1.1",
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.8.0",
+    "react-scripts": "^5.0.1",
+    "typescript": "^4.9.5"
   },
   "scripts": {
     "start": "react-scripts start",
