--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "@types/react-dom": "^18.0.11",
     "babel-loader": "^9.1.2",
     "graphology": "^0.25.1",
+    "graphology-layout": "^0.6.1",
+    "graphology-layout-force": "^0.2.4",
     "graphology-layout-forceatlas2": "^0.10.1",
+    "graphology-layout-noverlap": "^0.4.2",
     "graphology-types": "^0.24.7",
     "react": "^18.2.0",
     "react-animate-height": "^3.1.1",
