--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
-  "name": "sigma-demo",
+  "name": "un-unbist-graph-ui",
   "version": "0.1.0",
   "private": true,
-  "homepage": "/demo",
   "dependencies": {
     "@react-sigma/core": "^3.4.0",
     "@react-sigma/layout-forceatlas2": "^3.4.0",
@@ -10,6 +9,7 @@
     "@types/node": "^18.15.11",
     "@types/react": "^18.0.35",
     "@types/react-dom": "^18.0.11",
+    "@types/react-router-dom": "^5.3.3",
     "babel-loader": "^9.1.2",
     "graphology": "^0.25.1",
     "graphology-layout": "^0.6.1",
@@ -21,6 +21,7 @@
     "react-animate-height": "^3.1.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
+    "react-router-dom": "^6.11.0",
     "react-scripts": "^5.0.1",
     "typescript": "^4.9.5"
   },
