--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/react": "^18.0.35",
     "@types/react-dom": "^18.0.11",
     "@types/react-router-dom": "^5.3.3",
+    "@vercel/analytics": "^1.0.1",
     "babel-loader": "^9.1.2",
     "graphology": "^0.25.1",
     "graphology-layout": "^0.6.1",
