--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@chakra-ui/icons": "^2.1.1",
+    "@chakra-ui/react": "^2.8.2",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.0",
     "@react-sigma/core": "^3.4.0",
     "@react-sigma/layout-forceatlas2": "^3.4.0",
     "@types/lodash": "^4.14.194",
@@ -12,6 +16,7 @@
     "@types/react-router-dom": "^5.3.3",
     "@vercel/analytics": "^1.0.1",
     "babel-loader": "^9.1.2",
+    "framer-motion": "^11.0.8",
     "graphology": "^0.25.1",
     "graphology-layout": "^0.6.1",
     "graphology-layout-force": "^0.2.4",
